--- a/hvac_crm_platform/package.json
+++ b/hvac_crm_platform/package.json
@@ -22,14 +22,19 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.2.14",
     "@supabase/supabase-js": "^2.50.5",
+    "@types/dompurify": "^3.0.5",
     "@types/leaflet": "^1.9.20",
     "@types/react-router-dom": "^5.3.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.24.2",
+    "dompurify": "^3.2.6",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.525.0",
     "react": "^19.0.0",
@@ -70,7 +75,9 @@
     "npm-run-all": "^4.1.5",
     "postcss": "~8",
     "prettier": "^3.5.3",
+    "rollup-plugin-visualizer": "^6.0.3",
     "tailwindcss": "~3",
+    "terser": "^5.43.1",
     "ts-jest": "^29.4.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
