--- a/hvac_crm_platform/package.json
+++ b/hvac_crm_platform/package.json
@@ -20,6 +20,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-progress": "^1.1.7",
@@ -29,13 +30,13 @@
     "@radix-ui/react-toast": "^1.2.14",
     "@supabase/supabase-js": "^2.50.5",
     "@types/dompurify": "^3.0.5",
-    "@types/leaflet": "^1.9.20",
     "@types/react-router-dom": "^5.3.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.24.2",
     "dompurify": "^3.2.6",
     "leaflet": "^1.9.4",
+    "leaflet.markercluster": "^1.5.3",
     "lucide-react": "^0.525.0",
     "react": "^19.0.0",
     "react-dnd": "^16.0.1",
@@ -43,6 +44,7 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-leaflet": "^5.0.0",
+    "react-leaflet-cluster": "^2.1.0",
     "react-router-dom": "^7.6.3",
     "recharts": "^3.1.0",
     "sonner": "^2.0.6",
@@ -58,6 +60,8 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^30.0.0",
+    "@types/leaflet": "^1.9.20",
+    "@types/leaflet.markercluster": "^1.5.5",
     "@types/node": "^22.13.10",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
